# Skoltech-Task

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: CmakeBuildWin.yml  test.yml  test2.yml
src/: Circle.cpp  Circle.h  Figure.h  HelperFigure.cpp  HelperFigure.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
